Update access location and pop person configuration and regenerate schemas
